@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-28T08:08:48Z",
+  "timestamp" : "2023-07-28T16:08:37Z",
   "count_outdated" : 1280,
   "uniques_outdated" : 686,
-  "count" : 1308,
+  "count" : 1309,
   "uniques" : 704,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
