@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 4,
   "clones": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 2
     }
   ]
