@@ -1,3 +1,12 @@
+2023-07-28T16:08:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5693982733 # 1771
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
+* notice: last 14d: unq all: 4 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 686 1280 / 704 1308
+* notice: next accum: outdated-unq outdated-all / unq all: 686 1280 / 704 1309
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2023-07-28]
+
 2023-07-28T08:08:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5689718247 # 1770
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
